CLIENT-2741 Support virtual threads
- Require Java JDK 21.
- Replace thread local variables with heap-allocated variables.
- Run sync batch/scan/query node commands on virtual threads.
- Support ability for user to run sync single record commands on virtual threads.
- Async commands are unchanged.
- Remove ClientPolicy threadPool and sharedThreadPool variables.
- Remove BatchPolicy maxConcurrentThreads.  All sync batch node commands are now run in parallel on virtual threads.